# wh-imgsizer

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
src/: cli_input_validator.py  pillow_module.py
src/pillow_module/: image_load.py  image_process.py
src/scripts/: run_app.py
tests/: __init__.py  test_cli_input_validator.py  test_image_load.py
